[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Randy Concepcion <randy.concepcion@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
flask-sqlalchemy = "^3.0.5"
flask-wtf = "^1.1.1"
email-validator = "^2.0.0.post2"
flask-cors = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
flake8 = "^6.0.0"
black = "^23.3.0"
pylint = "^2.17.4"
pre-commit = "^3.3.3"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "tests/*",
    "app.py"
]
